-Continue structure layout -Create template for raw threads -Start implementing scheduler API

--- a/SDOS/SDOS.vcxproj.filters
+++ b/SDOS/SDOS.vcxproj.filters
@@ -786,6 +786,9 @@
     <ClCompile Include="Float.cpp">
       <Filter>Source files\System</Filter>
     </ClCompile>
+    <ClCompile Include="Threads.cpp">
+      <Filter>Source files\Kernel</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.hpp">
@@ -883,6 +886,9 @@
     </ClInclude>
     <ClInclude Include="Float.hpp">
       <Filter>Header files\System</Filter>
+    </ClInclude>
+    <ClInclude Include="Threads.hpp">
+      <Filter>Header files\Kernel</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
