--- a/SDOS/SDOS.vcxproj
+++ b/SDOS/SDOS.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="System.cpp" />
     <ClCompile Include="system_STM32G4xx.c" />
     <ClCompile Include="Temperature.cpp" />
+    <ClCompile Include="Threads.cpp" />
     <ClCompile Include="TIMER.cpp" />
     <ClCompile Include="TOBY.cpp" />
     <ClCompile Include="UART.cpp" />
@@ -132,6 +133,7 @@
     <ClInclude Include="Semaphore.hpp" />
     <ClInclude Include="System.hpp" />
     <ClInclude Include="Temperature.hpp" />
+    <ClInclude Include="Threads.hpp" />
     <ClInclude Include="TIMER.hpp" />
     <ClInclude Include="TOBY.hpp" />
     <ClInclude Include="UART.hpp" />
